--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -7,7 +7,7 @@
 		<i class="fas fa-th pointer fa-2x"></i>
 	{{/link-to}}
 
-	{{#link-to 'user.deckgroups' model.id title="Decks"}}
+	{{#link-to 'user.deckgroups' model.id (query-params cardset=latest) title="Decks"}}
 		<i class="fas fa-layer-group pointer fa-2x"></i>
 	{{/link-to}}
 
