--- a/app/templates/user/deckgroups/index.hbs
+++ b/app/templates/user/deckgroups/index.hbs
@@ -4,37 +4,20 @@
 	{{/each}}
 </select>
 
-<h3>Légende</h3>
-<table>
-	<tr class="decks">
-		<td class='rarity-Commune'>Commune</td>
-		<td class='rarity-Rare'>Rare</td>
-		<td class='rarity-Epique'>Epique</td>
-		<td class='rarity-Légendaire'>Légendaire</td>
-	</tr>
-</table>
-<table>
-	<tr class="decks">
-		<td class='cardclass'>Carte de classe</td>
-		<td>Carte neutre</td>
-	</tr>
-</table>
-<table>
-	<tr class="decks">
-		<td class='owned'>Possédée</td>
-		<td class='cardset-Classique'>A obtenir du set Classique</td>
-		<td class='cardset-current'>A obtenir de l'extension courante</td>
-		<td class='cardset-year'>A obtenir d'une extension de l'année en cours</td>
-		<td>A obtenir d'une extension des années précédentes</td>
-	</tr>
-</table>
-
-<br/>
+<p/>
 
 <table>
+	<tr>
+		<td class="noborder"></td>
+		{{#each model.cardclasses as |cardclass|}}
+			{{#if (lt cardclass.id 12)}}
+				<th class={{concat 'cardclass cardclass-' cardclass.name_fr}}>{{cardclass.name_fr}}</th>
+			{{/if}}
+		{{/each}}
+	</tr>
 	{{#each model.deckgroups as |deckgroup|}}
 		<tr>
-			<th colspan="9">
+			<th>
 				{{deckgroup.name}}
 				{{#if deckgroup.url}}
 					<a href={{deckgroup.url}} target="_blank">
@@ -42,15 +25,6 @@
 					</a>
 				{{/if}}
 			</th>
-		</tr>
-		<tr>
-			{{#each model.cardclasses as |cardclass|}}
-				{{#if (lt cardclass.id 12)}}
-					<th class={{concat 'cardclass cardclass-' cardclass.name_fr}}>{{cardclass.name_fr}}</th>
-				{{/if}}
-			{{/each}}
-		</tr>
-		<tr>
 			{{#each deckgroup.sortedDecks as |deck|}}
 				<td class={{if (and deck.dust (eq deck.dust (get (get deckstats deck.id) "dust"))) "complete"}}>
 					{{deck.name}}
@@ -76,41 +50,6 @@
 							</span>
 						{{/with}}
 					{{/if}}
-				</td>
-			{{/each}}
-		</tr>
-		<tr class="decks">
-			{{#each deckgroup.sortedDecks as |deck|}}
-				<td>
-					<table>
-						{{#each deck.sortedDeckcards as |deckcard|}}
-							{{#with deckcard.card as |card|}}
-								{{#with (filter (action "filterOwned") card.collections) as |collections|}}
-									<tr><td class={{if (gte collections.firstObject.number deckcard.number) 'owned' (concat 'cardset-' card.cardset.class)}}>
-										<div class="deckcard">
-											{{min collections.firstObject.number deckcard.number}}/{{deckcard.number}}
-											<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}}>{{card.name_fr}}</span>
-											<div class="cardinfo">
-												<img src={{card.image}} />
-												<div class="cardset">{{card.cardset.name_fr}}</div>
-											</div>
-										</div>
-									</td></tr>
-								{{else}}
-									<tr><td class={{concat 'cardset-' card.cardset.class}}>
-										<div class="deckcard">
-											0/{{deckcard.number}}
-											<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}}>{{card.name_fr}}</span>
-											<div class="cardinfo">
-												<img src={{card.image}} />
-												<div class="cardset">{{card.cardset.name_fr}}</div>
-											</div>
-										</div>
-									</td></tr>
-								{{/with}}
-							{{/with}}
-						{{/each}}
-					</table>
 				</td>
 			{{/each}}
 		</tr>
