--- a/app/templates/user/deckgroups/deckgroup.hbs
+++ b/app/templates/user/deckgroups/deckgroup.hbs
@@ -1,27 +1,15 @@
-<h3>Légende</h3>
-<table>
-	<tr class="decks">
-		<td class='rarity-Commune'>Commune</td>
-		<td class='rarity-Rare'>Rare</td>
-		<td class='rarity-Epique'>Epique</td>
-		<td class='rarity-Légendaire'>Légendaire</td>
-	</tr>
-</table>
-<table>
-	<tr class="decks">
-		<td class='cardclass'>Carte de classe</td>
-		<td>Carte neutre</td>
-	</tr>
-</table>
-<table>
-	<tr class="decks">
-		<td class='owned'>Possédée</td>
-		<td class='cardset-Classique'>A obtenir du set Classique</td>
-		<td class='cardset-current'>A obtenir de l'extension courante</td>
-		<td class='cardset-year'>A obtenir d'une extension de l'année en cours</td>
-		<td>A obtenir d'une extension des années précédentes</td>
-	</tr>
-</table>
+<h3>
+	{{model.deckgroup.name}}
+	{{#if model.deckgroup.url}}
+		<a href={{model.deckgroup.url}} target="_blank">
+			<i class="fas fa-external-link-alt"></i>
+		</a>
+	{{/if}}
+</h3>
+
+<h4>
+	{{model.deckgroup.cardset.name_fr}}
+</h4>
 
 <br/>
 
@@ -35,7 +23,7 @@
 	</tr>
 
 	<tr>
-		{{#each deckgroup.sortedDecks as |deck|}}
+		{{#each model.deckgroup.sortedDecks as |deck|}}
 			<td class={{if (and deck.dust (eq deck.dust (get (get deckstats deck.id) "dust"))) "complete"}}>
 				{{deck.name}}
 				{{#if deck.url}}
@@ -64,7 +52,7 @@
 		{{/each}}
 	</tr>
 	<tr class="decks">
-		{{#each deckgroup.sortedDecks as |deck|}}
+		{{#each model.deckgroup.sortedDecks as |deck|}}
 			<td>
 				<table>
 					{{#each deck.sortedDeckcards as |deckcard|}}
@@ -97,5 +85,32 @@
 				</table>
 			</td>
 		{{/each}}
+	</tr>
+</table>
+
+<br/>
+
+<h3>Légende</h3>
+<table>
+	<tr class="decks">
+		<td class='rarity-Commune'>Commune</td>
+		<td class='rarity-Rare'>Rare</td>
+		<td class='rarity-Epique'>Epique</td>
+		<td class='rarity-Légendaire'>Légendaire</td>
+	</tr>
+</table>
+<table>
+	<tr class="decks">
+		<td class='cardclass'>Carte de classe</td>
+		<td>Carte neutre</td>
+	</tr>
+</table>
+<table>
+	<tr class="decks">
+		<td class='owned'>Possédée</td>
+		<td class='cardset-Classique'>A obtenir du set Classique</td>
+		<td class='cardset-current'>A obtenir de l'extension courante</td>
+		<td class='cardset-year'>A obtenir d'une extension de l'année en cours</td>
+		<td>A obtenir d'une extension des années précédentes</td>
 	</tr>
 </table>
