User deck: card type

--- a/app/templates/user/deck.hbs
+++ b/app/templates/user/deck.hbs
@@ -18,6 +18,7 @@
 <table class="decks">
 	<tr>
 		<th class="noborder"></th>
+		<th>Type</th>
 		<th>Coût</th>
 		<th>Attaque</th>
 		<th>Défense</th>
@@ -36,6 +37,7 @@
 							</div>
 						</div>
 					</td>
+					<td>{{card.type.name_fr}}</td>
 					<td class="stat">{{card.cost}}</td>
 					<td class="stat">{{card.atk}}</td>
 					<td class="stat">{{card.health}}</td>
@@ -52,6 +54,7 @@
 							</div>
 						</div>
 					</td>
+					<td>{{card.type.name_fr}}</td>
 					<td class="stat">{{card.cost}}</td>
 					<td class="stat">{{card.atk}}</td>
 					<td class="stat">{{card.health}}</td>
