--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -72,7 +72,7 @@
 			{{#if (or (not standard) (and set.standard (not-eq set.name_fr "Basique")))}}
 				<td class="percent">
 					<div class="less">
-						{{#with (get (get (get completion.cardsets set.id) "getwantedsum") 1) as |rate|}}
+						{{#with (mult 100 (get (get (get completion.cardsets set.id) "getwantedsum") 1)) as |rate|}}
 							{{round rate decimals=(if (lt rate 10) 1 0)}}&nbsp;%
 						{{/with}}
 						<div class="more">
@@ -86,12 +86,12 @@
 									<tr>
 										<th>{{getwanted}} cartes recherchées dans un paquet</th>
 										<td class="percent">
-											{{#with (get (get (get completion.cardsets set.id) "getwanted") getwanted) as |rate|}}
+											{{#with (mult 100 (get (get (get completion.cardsets set.id) "getwanted") getwanted)) as |rate|}}
 												{{round rate decimals=(if (lt rate 10) 1 0)}}&nbsp;%
 											{{/with}}
 										</td>
 										<td class="percent">
-											{{#with (get (get (get completion.cardsets set.id) "getwantedsum") getwanted) as |rate|}}
+											{{#with (mult 100 (get (get (get completion.cardsets set.id) "getwantedsum") getwanted)) as |rate|}}
 												{{round rate decimals=(if (lt rate 10) 1 0)}}&nbsp;%
 											{{/with}}
 										</td>
@@ -148,7 +148,7 @@
 						</td>
 						<td class="stat2">/</td>
 						<td class="stat3">
-							<span title="{{round (get (get (get (get completion.cardsets set.id) "rarities") rarity.id) "rate")}}&nbsp;%">
+							<span title="{{round (mult 100 (get (get (get (get completion.cardsets set.id) "rarities") rarity.id) "rate"))}}&nbsp;%">
 								{{get (get (get (get completion.cardsets set.id) "rarities") rarity.id) "total"}}
 							</span>
 						</td>
@@ -197,12 +197,12 @@
 		{{#each model.cardsets as |set|}}
 			{{#if (or (not standard) set.standard)}}
 				<th colspan="3" class="percent">
-					{{round (get (get completion.cardsets set.id) "rate")}}&nbsp;%
+					{{round (mult 100 (get (get completion.cardsets set.id) "rate"))}}&nbsp;%
 				</th>
 			{{/if}}
 		{{/each}}
 		<th colspan="3" class="percent">
-			{{round completion.rate}}&nbsp;%
+			{{round (mult 100 completion.rate)}}&nbsp;%
 		</th>
 	</tr>
 
@@ -212,7 +212,7 @@
 			{{#if (or (not standard) (and set.standard (not-eq set.name_fr "Basique")))}}
 				<td colspan="3" class="percent">
 					<div class="less">
-						{{#with (get (get (get completion.cardsets set.id) "getnewsum") 1) as |rate|}}
+						{{#with (mult 100 (get (get (get completion.cardsets set.id) "getnewsum") 1)) as |rate|}}
 							{{round rate decimals=(if (lt rate 10) 1 0)}}&nbsp;%
 						{{/with}}
 						<div class="more">
@@ -226,12 +226,12 @@
 									<tr>
 										<th>{{getnew}} nouvelles cartes dans un paquet</th>
 										<td class="percent">
-											{{#with (get (get (get completion.cardsets set.id) "getnew") getnew) as |rate|}}
+											{{#with (mult 100 (get (get (get completion.cardsets set.id) "getnew") getnew)) as |rate|}}
 												{{round rate decimals=(if (lt rate 10) 1 0)}}&nbsp;%
 											{{/with}}
 										</td>
 										<td class="percent">
-											{{#with (get (get (get completion.cardsets set.id) "getnewsum") getnew) as |rate|}}
+											{{#with (mult 100 (get (get (get completion.cardsets set.id) "getnewsum") getnew)) as |rate|}}
 												{{round rate decimals=(if (lt rate 10) 1 0)}}&nbsp;%
 											{{/with}}
 										</td>
