--- a/app/templates/user/deckgroups/deckgroup.hbs
+++ b/app/templates/user/deckgroups/deckgroup.hbs
@@ -39,7 +39,7 @@
 					{{/with}}
 				{{/if}}
 				<br/>
-				{{#if deck.dust}}
+				{{#if deck.size}}
 					{{get (get deckstats deck.id) "owned"}}/{{deck.size}}
 					({{get (get deckstats deck.id) "dust"}}/{{deck.dust}})
 					{{#with (sub deck.dust (get (get deckstats deck.id) "dust")) as |missing|}}
