User stats: extrahs keeping golden

--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -520,6 +520,41 @@
 			<th>{{rarity.name_fr}}</th>
 			<td class="stat">
 				{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='extra')}}
+					{{get model.stat.extrahs.normal.rarities rarity.id}}
+				{{/link-to}}
+			</td>
+			<td class="stat">
+				{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='extra')}}
+					{{get model.stat.extrahs.golden.rarities rarity.id}}
+				{{/link-to}}
+			</td>
+			<td class="stat dust">
+				{{add (mult (get model.stat.extrahs.normal.rarities rarity.id) rarity.destructionDust) (mult (get model.stat.extrahs.golden.rarities rarity.id) rarity.destructionDustGolden)}}
+			</td>
+		</tr>
+	{{/each}}
+
+	<tr>
+		<th>TOTAL</th>
+		<th class="stat">{{model.stat.extrahs.normal.total}}</th>
+		<th class="stat">{{model.stat.extrahs.golden.total}}</th>
+		<th class="stat dust">{{add (reduce (action "sumDust" false) 0 model.stat.extrahs.normal.rarities) (reduce (action "sumDust" true) 0 model.stat.extrahs.golden.rarities)}}</th>
+	</tr>
+</table>
+
+<table>
+	<tr>
+		<th class="noborder"></th>
+		<th>Normales</th>
+		<th>Dorées</th>
+		<th class="dust">Poussière</th>
+	</tr>
+
+	{{#each ordered_rarities as |rarity|}}
+		<tr>
+			<th>{{rarity.name_fr}}</th>
+			<td class="stat">
+				{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='extra')}}
 					{{get model.stat.extra.normal.rarities rarity.id}}
 				{{/link-to}}
 			</td>
