User collection: custom total for owned and golden

--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -164,5 +164,9 @@
 	</div>
 	{{#if (eq own null)}}
 		{{model.cards.meta.record-count}} cartes différentes
+	{{else if (eq own "owned")}}
+		{{model.cards.meta.record-count}} cartes possédées
+	{{else if (eq own "golden")}}
+		{{model.cards.meta.record-count}} cartes dorées possédées
 	{{/if}}
 </div>
