--- a/app/templates/user/deckgroups/deckgroup.hbs
+++ b/app/templates/user/deckgroups/deckgroup.hbs
@@ -23,67 +23,83 @@
 	</tr>
 
 	<tr>
-		{{#each model.deckgroup.sortedDecks as |deck|}}
-			<td class={{if (and deck.dust (eq deck.dust (get (get deckstats deck.id) "dust"))) "complete"}}>
-				{{deck.name}}
-				{{#if deck.url}}
-					<a href={{deck.url}} target="_blank">
-						<i class="fas fa-external-link-alt"></i>
-					</a>
-				{{/if}}
-				{{#if (gt (sub deck.dust (get (get deckstats deck.id) "dust")) 0)}}
-					{{#with (filter (action "filterOwned") deck.wanteddecks) as |wanteddecks|}}
-						<i class="fas fa-heart pointer" style="color: red;" {{action "removeWanteddeck" wanteddecks.firstObject}}></i>
-					{{else}}
-						<i class="fas fa-heart faded pointer" style="color: red;" {{action "addWanteddeck" deck}}></i>
+		{{#each model.cardclasses as |cardclass|}}
+			{{#if (lt cardclass.id 12)}}
+				{{#with (filter (action "filterCardclass" cardclass) model.deckgroup.decks) as |decks|}}
+					{{#with decks.firstObject as |deck|}}
+						<td class={{if (and deck.dust (eq deck.dust (get (get deckstats deck.id) "dust"))) "complete"}}>
+							{{deck.name}}
+							{{#if deck.url}}
+								<a href={{deck.url}} target="_blank">
+									<i class="fas fa-external-link-alt"></i>
+								</a>
+							{{/if}}
+							{{#if (gt (sub deck.dust (get (get deckstats deck.id) "dust")) 0)}}
+								{{#with (filter (action "filterOwned") deck.wanteddecks) as |wanteddecks|}}
+									<i class="fas fa-heart pointer" style="color: red;" {{action "removeWanteddeck" wanteddecks.firstObject}}></i>
+								{{else}}
+									<i class="fas fa-heart faded pointer" style="color: red;" {{action "addWanteddeck" deck}}></i>
+								{{/with}}
+							{{/if}}
+							<br/>
+							{{#if deck.size}}
+								{{get (get deckstats deck.id) "owned"}}/{{deck.size}}
+								({{get (get deckstats deck.id) "dust"}}/{{deck.dust}})
+								{{#with (sub deck.dust (get (get deckstats deck.id) "dust")) as |missing|}}
+									<span class={{if (gt missing 0) "missing"}}>
+										{{missing}}
+									</span>
+								{{/with}}
+							{{/if}}
+						</td>
 					{{/with}}
-				{{/if}}
-				<br/>
-				{{#if deck.size}}
-					{{get (get deckstats deck.id) "owned"}}/{{deck.size}}
-					({{get (get deckstats deck.id) "dust"}}/{{deck.dust}})
-					{{#with (sub deck.dust (get (get deckstats deck.id) "dust")) as |missing|}}
-						<span class={{if (gt missing 0) "missing"}}>
-							{{missing}}
-						</span>
-					{{/with}}
-				{{/if}}
-			</td>
+				{{else}}
+					<td></td>
+				{{/with}}
+			{{/if}}
 		{{/each}}
 	</tr>
 	<tr class="decks">
-		{{#each model.deckgroup.sortedDecks as |deck|}}
-			<td>
-				<table>
-					{{#each deck.sortedDeckcards as |deckcard|}}
-						{{#with deckcard.card as |card|}}
-							{{#with (filter (action "filterOwned") card.collections) as |collections|}}
-								<tr><td class={{if (gte collections.firstObject.number deckcard.number) 'owned' (concat 'cardset-' card.cardset.class)}}>
-									<div class="deckcard">
-										{{min collections.firstObject.number deckcard.number}}/{{deckcard.number}}
-										<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}}>{{card.name_fr}}</span>
-										<div class="cardinfo">
-											<img src={{card.image}} />
-											<div class="cardset">{{card.cardset.name_fr}}</div>
-										</div>
-									</div>
-								</td></tr>
-							{{else}}
-								<tr><td class={{concat 'cardset-' card.cardset.class}}>
-									<div class="deckcard">
-										0/{{deckcard.number}}
-										<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}}>{{card.name_fr}}</span>
-										<div class="cardinfo">
-											<img src={{card.image}} />
-											<div class="cardset">{{card.cardset.name_fr}}</div>
-										</div>
-									</div>
-								</td></tr>
-							{{/with}}
-						{{/with}}
-					{{/each}}
-				</table>
-			</td>
+		{{#each model.cardclasses as |cardclass|}}
+			{{#if (lt cardclass.id 12)}}
+				{{#with (filter (action "filterCardclass" cardclass) model.deckgroup.decks) as |decks|}}
+					{{#with decks.firstObject as |deck|}}
+						<td>
+							<table>
+								{{#each deck.sortedDeckcards as |deckcard|}}
+									{{#with deckcard.card as |card|}}
+										{{#with (filter (action "filterOwned") card.collections) as |collections|}}
+											<tr><td class={{if (gte collections.firstObject.number deckcard.number) 'owned' (concat 'cardset-' card.cardset.class)}}>
+												<div class="deckcard">
+													{{min collections.firstObject.number deckcard.number}}/{{deckcard.number}}
+													<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}}>{{card.name_fr}}</span>
+													<div class="cardinfo">
+														<img src={{card.image}} />
+														<div class="cardset">{{card.cardset.name_fr}}</div>
+													</div>
+												</div>
+											</td></tr>
+										{{else}}
+											<tr><td class={{concat 'cardset-' card.cardset.class}}>
+												<div class="deckcard">
+													0/{{deckcard.number}}
+													<span class={{concat 'rarity-' card.rarity.name_fr (if (lt card.cardclass.id 12) ' cardclass')}}>{{card.name_fr}}</span>
+													<div class="cardinfo">
+														<img src={{card.image}} />
+														<div class="cardset">{{card.cardset.name_fr}}</div>
+													</div>
+												</div>
+											</td></tr>
+										{{/with}}
+									{{/with}}
+								{{/each}}
+							</table>
+						</td>
+					{{/with}}
+				{{else}}
+					<td></td>
+				{{/with}}
+			{{/if}}
 		{{/each}}
 	</tr>
 </table>
