--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -4,7 +4,7 @@
 	<i class="fas fa-square pointer fa-2x {{if (and own (not-eq own 'owned')) "faded"}}"
 		title="Possédées" {{action 'toggleParam' 'own' 'owned'}}
 	/>
-	<i class="fas fa-square pointer fa-2x {{if (and own (not-eq own 'golden')) "faded"}}" style="color: darkgoldenrod;"
+	<i class="fas fa-square pointer fa-2x {{if (and own (not-eq own 'golden') (not-eq own 'goldenb')) "faded"}}" style="color: darkgoldenrod;"
 		title="Dorées" {{action 'toggleParam' 'own' 'golden'}}
 	/>
 	<span class="fa-stack fa-1x pointer {{if (and own (not-eq own 'missing')) "faded"}}"
