--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -69,7 +69,21 @@
 				<img src={{card.image}} class="pointer" title={{card.cardset.name_fr}} {{action 'addToCollection' card}} />
 			</div>
 			<div class="number">
-				{{#if (and (not-eq card.rarity.name_fr "Légendaire") (lt collection.firstObject.number 2))}}
+				<div class="wanted-decks">
+					<div class="decks">
+						{{#with card.deckcards as |deckcards|}}
+							<span>{{deckcards.length}} <i class="fas fa-layer-group"></i></span>
+							<ul class="wanteddecks">
+								{{#each deckcards as |deckcard|}}
+									<li>
+										{{deckcard.fulldeck}}
+									</li>
+								{{/each}}
+							</ul>
+						{{else}}
+							<span>&nbsp;</span>
+						{{/with}}
+					</div>
 					<div class="wanted pointer" {{action 'cycleWanted' card}}>
 						{{#with (filter (action "filterOwned") card.wantedcards) as |wantedcards|}}
 							<span>
@@ -87,11 +101,11 @@
 									</li>
 								{{/each}}
 							</ul>
-						{{else}}
+						{{else if (and (not-eq card.rarity.name_fr "Légendaire") (lt collection.firstObject.number 2))}}
 							<span class="notwanted"><i class="fas fa-heart"></i></span>
 						{{/with}}
 					</div>
-				{{/if}}
+				</div>
 				<div class="normal">
 					{{#if (gt collection.firstObject.number collection.firstObject.golden)}}
 						<i class="fas fa-minus-circle pointer" {{action 'removeFromCollection' card}}></i>
@@ -114,26 +128,42 @@
 				<img src={{card.image}} class="pointer" title={{card.cardset.name_fr}} {{action 'addToCollection' card}} />
 			</div>
 			<div class="number">
-				<div class="wanted pointer" {{action 'cycleWanted' card}}>
-					{{#with (filter (action "filterOwned") card.wantedcards) as |wantedcards|}}
-						<span>
-							{{reduce_number (action "sumWanted") 0 wantedcards}}
-							{{#if (eq (reduce_number (action "maxWanted") 0 wantedcards) 1)}}
-								<i class="far fa-heart"></i>
-							{{else}}
-								<i class="fas fa-heart"></i>
-							{{/if}}
-						</span>
-						<ul class="wanteddecks">
-							{{#each wantedcards as |wantedcard|}}
-								<li>
-									{{wantedcard.number}} <i class="fas fa-heart"></i> {{wantedcard.fulldeck}}
-								</li>
-							{{/each}}
-						</ul>
-					{{else}}
-						<span class="notwanted"><i class="fas fa-heart"></i></span>
-					{{/with}}
+				<div class="wanted-decks">
+					<div class="decks">
+						{{#with card.deckcards as |deckcards|}}
+							<span>{{deckcards.length}} <i class="fas fa-layer-group"></i></span>
+							<ul class="wanteddecks">
+								{{#each deckcards as |deckcard|}}
+									<li>
+										{{deckcard.fulldeck}}
+									</li>
+								{{/each}}
+							</ul>
+						{{else}}
+							<span>&nbsp;</span>
+						{{/with}}
+					</div>
+					<div class="wanted pointer" {{action 'cycleWanted' card}}>
+						{{#with (filter (action "filterOwned") card.wantedcards) as |wantedcards|}}
+							<span>
+								{{reduce_number (action "sumWanted") 0 wantedcards}}
+								{{#if (eq (reduce_number (action "maxWanted") 0 wantedcards) 1)}}
+									<i class="far fa-heart"></i>
+								{{else}}
+									<i class="fas fa-heart"></i>
+								{{/if}}
+							</span>
+							<ul class="wanteddecks">
+								{{#each wantedcards as |wantedcard|}}
+									<li>
+										{{wantedcard.number}} <i class="fas fa-heart"></i> {{wantedcard.fulldeck}}
+									</li>
+								{{/each}}
+							</ul>
+						{{else}}
+							<span class="notwanted"><i class="fas fa-heart"></i></span>
+						{{/with}}
+					</div>
 				</div>
 				<div class="normal">
 					<i class="fas fa-plus-circle pointer" {{action 'addToCollection' card}}></i>
