--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -104,6 +104,19 @@
 			{{/if}}
 		{{/each}}
 	</tr>
+
+	<tr>
+		<th>Valeur</th>
+		{{#each model.cardsets as |set|}}
+			{{#if (or (not standard) (and set.standard (not-eq set.name_fr "Basique")))}}
+				<td class="stat">
+					{{round (get (get completion.cardsets set.id) "wantedValue")}}
+				</td>
+			{{else if (eq set.name_fr "Basique")}}
+				<td class="stat"/>
+			{{/if}}
+		{{/each}}
+	</tr>
 </table>
 
 <h3>Complétion</h3>
@@ -239,6 +252,19 @@
 				</td>
 			{{else if (eq set.name_fr "Basique")}}
 				<td colspan="3" class="percent"/>
+			{{/if}}
+		{{/each}}
+	</tr>
+
+	<tr>
+		<th>Valeur</th>
+		{{#each model.cardsets as |set|}}
+			{{#if (or (not standard) (and set.standard (not-eq set.name_fr "Basique")))}}
+				<td colspan="3" class="stat">
+					{{round (get (get completion.cardsets set.id) "newValue")}}
+				</td>
+			{{else if (eq set.name_fr "Basique")}}
+				<td colspan="3" class="stat"/>
 			{{/if}}
 		{{/each}}
 	</tr>
